submit button event listener added

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <textarea cols="30" rows="10"></textarea>
-    <button type="button"> Submit</button>
-
+    <div style="position: absolute; display: flex; flex-direction: column;right:0px;">
+        <textarea cols="30" rows="10" id="ruleText">{"window":5, "mullions":5}</textarea>
+        <button type="button" id="submitFacade"> Submit</button>
+    </div>
     <script src="script.js" type="module">
+
 
 
     </script>
