--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div style="position: absolute; display: flex; flex-direction: column;right:0px;">
-        <textarea cols="30" rows="10" id="ruleText">{"window":5, "mullions":5}</textarea>
-        <button type="button" id="submitFacade"> Submit</button>
+        <textarea cols="80" rows="10" id="ruleText"></textarea>
+        <button type="button" id="submitFacade"> Submit Request</button>
     </div>
     <script src="script.js" type="module">
 
