--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,16 @@
 
 <body>
     <div style="position: absolute; display: flex; flex-direction: column;right:0px;">
+
+
+    	<select id="sel" onchange="show(this)">
+    		<option value="">-- Select --</option>
+    	</select>
+
         <textarea cols="80" rows="10" id="ruleText"></textarea>
         <button type="button" id="submitFacade"> Submit Request</button>
     </div>
     <script src="script.js" type="module">
-
-
-
     </script>
 </body>
 
