--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div style="position: absolute; display: flex; flex-direction: column;right:0px;">
+    <div style="position: absolute; display: hide; flex-direction: column;right:0px;">
 
 
     	<select id="sel" onchange="show(this)">
