--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       <textarea cols="80" rows="10" id="ruleText"></textarea>
       <button type="button" id="submitFacade">Submit Request</button>
     </div>
+    <script src="libs/clean-pslg.js" type="module"></script>
     <script src="script.js" type="module"></script>
   </body>
 </html>
